feature(shopbot): made my footer responsive and my images to show on deployment

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/bot7.PNG" class="w3-image d-block w-100" alt="#">
+                    <img src="./img/bot7.PNG" class="w3-image d-block w-100" alt="#">
                     <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/bot8.PNG" class="w3-image d-block w-100" alt="#">
+                    <img src="./img/bot8.PNG" class="w3-image d-block w-100" alt="#">
                     <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/bot1.jpg" class="w3-image d-block w-100" alt="#">
+                    <img src="./img/bot1.jpg" class="w3-image d-block w-100" alt="#">
                     <div class="carousel-caption d-none d-md-block"></div>
                 </div>
             </div>
@@ -78,13 +78,13 @@
     <div class="container w3-white">
         <div class="row">
             <div class="col-md-6">
-                <img src="/img/bot6.PNG" class="w3-image card-img" alt="#">
+                <img src="./img/bot6.PNG" class="w3-image card-img" alt="#">
                 <h3 class="headline">About Shopbot</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptate sit eveniet quae voluptatem neque sequi consequatur pariatur voluptatibus. Eligendi expedita saepe voluptate hic! Doloribus eos odio cupiditate culpa quia.</p>
                 <p class="card-text; card-word"><small>Last updated 3 mins ago</small></p>
             </div>
             <div class="col-md-6">
-                <img src="/img/artificial-intelligence-3382507_1920.jpg" class="w3-image card-img" alt="#" id="card-img-fit">
+                <img src="./img/artificial-intelligence-3382507_1920.jpg" class="w3-image card-img" alt="#" id="card-img-fit">
             </div>
         </div>
     </div>
@@ -123,10 +123,10 @@
     <div class="w3-container w3-light-grey">
         <div class="row d-sect">
             <div class="col-md-6">
-                <img class="w3-image w3-round-large" src="/img/photo5.jpeg" alt="Buildings">
+                <img class="w3-image w3-round-large" src="./img/photo5.jpeg" alt="Buildings">
             </div>
             <div class="col-md-6">
-                <img class="w3-image w3-round-large" src="/img/bed-1979270_1920.jpg" alt="comfy">
+                <img class="w3-image w3-round-large" src="./img/bed-1979270_1920.jpg" alt="comfy">
                 <h6 id="d-sect">Shopping from your comfort zone is our priority</h6>  
             </div>
         </div>
@@ -139,7 +139,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                   <div class="card">
-                    <img src="/img/franklyn.jpg" class="card-img-top" alt="franklyn">
+                    <img src="./img/franklyn.jpg" class="card-img-top" alt="franklyn">
                     <div class="card-body">
                       <h5 class="card-title team-name">Franklyn Emeka Nwaneri</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit magnam aperiam, illum earum, facere laborum fuga atque sequi sed quo accusantium dicta temporibus consectetur aliquam reprehenderit, incidunt ducimus itaque neque!</p>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col">
                   <div class="card">
-                    <img src="/img/sile.jpg" class="card-img-top" alt="sile">
+                    <img src="./img/sile.jpg" class="card-img-top" alt="sile">
                     <div class="card-body">
                       <h5 class="card-title team-name">Emmanuel Mayowa Adesile</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sapiente iusto reiciendis officia maxime reprehenderit modi pariatur accusamus, repellendus, obcaecati laudantium error deserunt? Quisquam, unde officiis harum atque veniam neque.</p>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="col">
                   <div class="card">
-                    <img src="/img/bk.jpg" class="card-img-top" alt="bukky">
+                    <img src="./img/bk.jpg" class="card-img-top" alt="bukky">
                     <div class="card-body">
                       <h5 class="card-title team-name">Bukola Felicia Akinnadeju</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nesciunt assumenda sapiente ad aspernatur possimus nihil fuga dolorum dignissimos quae, aliquam unde similique commodi tempora itaque autem beatae, omnis sint.</p>
@@ -191,9 +191,8 @@
         </div>
 
         <!-- Skills Section -->
-        <div class="w3-container">
+        <!-- <div class="w3-container">
             <div class="w3-row-padding footer-head">
-                <div class="w3-col m6">
                     <p class="w3-wide"><i></i>Connectivity</p>
                     <div class="w3-blue">
                         <div class="w3-container w3-white w3-center" style="width:90%">90%</div>
@@ -206,9 +205,8 @@
                     <div class="w3-blue">
                         <div class="w3-container w3-white w3-center" style="width:75%">75%</div>
                     </div>
-                </div>
             </div>
-        </div>
+        </div> -->
 
             <div class="w3-large w3-section">
                 <h3>Join Our Community </h3>
